--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Deliverable1">
+        <activity android:name=".StudentLoggedIn"></activity>
         <activity android:name=".Signup" />
         <activity android:name=".MainActivity">
             <intent-filter>
