--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CourseRegistration">
+        <activity android:name=".Activity.StudentActivity.EnrolledCourses"></activity>
         <activity android:name=".Activity.InstructorActivity.AssignedCourses" />
         <activity android:name=".Activity.InstructorActivity.EditCourseAsInstructor" />
         <activity
@@ -16,6 +17,7 @@
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
